--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -69,6 +69,9 @@
           <!-- Added ml-auto class -->
           {% if user.is_authenticated %}
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'all_files' %}">All Files</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           {% else %}
