--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -72,6 +72,18 @@
             <a class="nav-link" href="{% url 'all_files' %}">All Files</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'img_files' %}">Image Files</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'pdf_files' %}">PDF Files</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'doc_files' %}">Doc Files</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'txt_files' %}">Text Files</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           {% else %}
