--- a/cloud/templates/files.html
+++ b/cloud/templates/files.html
@@ -7,13 +7,24 @@
         <h1 class="text-center">Emtpy</h1>
     {% endif %}
     {% for file in files %}
-    <li class="list-group-item text-center">
+    <li class="list-group-item text-center mb-3 border border-2 border-primary">
         <h1>{{ file.title }}</h1>
         <small><p class="text-primary">Uploaded at {{ file.created_at }} by {{ username }}</p></small>
         <p class="card-text" style="word-wrap: break-word; white-space: normal;">{{ file.description|truncatechars:150 }}</p>
         <div>
             <a class="btn btn-outline-success btn-sm" href="#">View</a>
             <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+            {% if not file.is_shared %}
+                <a class="btn btn-outline-info btn-sm" href="{% url 'share_file' pk=file.pk %}">Share File</a>
+            {% else %}
+                <a class="btn btn-outline-info btn-sm" href="{% url 'share_file' pk=file.pk %}">Un-Share File</a>
+                <div class="mt-3">
+                    <input type="text" id="share-link-{{ file.pk }}" value="{{ request.scheme }}://{{ request.get_host }}/view-share/{{ file.short_url.short_url }}" readonly class="form-control text-center">
+                </div>
+                <div class= "mt-2">
+                    <button class="btn btn-outline-secondary btn-sm" onclick="copyToClipboard({{ file.pk }})">Copy Link</button>
+                </div>
+            {% endif %}
         </div>
     </li>
     {% endfor %}
@@ -43,4 +54,20 @@
     </nav>
 </div>
 
+<script>
+    function copyToClipboard(filePk) {
+        /* Get the text field using the file's primary key */
+        const shareLinkInput = document.getElementById("share-link-" + filePk);
+    
+        /* Select the text field */
+        shareLinkInput.select();
+        shareLinkInput.setSelectionRange(0, 99999); /* For mobile devices */
+    
+        /* Copy the text inside the text field to the clipboard */
+        navigator.clipboard.writeText(shareLinkInput.value);
+    
+        /* Deselect the text field */
+        shareLinkInput.blur();
+    }
+</script>
 {% endblock %}
