--- a/cloud/templates/files.html
+++ b/cloud/templates/files.html
@@ -22,7 +22,7 @@
                     <input type="text" id="share-link-{{ file.pk }}" value="{{ request.scheme }}://{{ request.get_host }}/view-share/{{ file.short_url.short_url }}" readonly class="form-control text-center">
                 </div>
                 <div class= "mt-2">
-                    <button class="btn btn-outline-secondary btn-sm" onclick="copyToClipboard({{ file.pk }})">Copy Link</button>
+                    <button class="btn btn-outline-secondary btn-sm" onclick="copyToClipboard('{{ file.pk }}')">Copy Link</button>
                 </div>
             {% endif %}
         </div>
