--- a/cloud/templates/files.html
+++ b/cloud/templates/files.html
@@ -4,7 +4,7 @@
 <h1 class="text-center">{{ type }} Files</h1>
 <ul class="list-group">
     {%if not files %}
-        <h1 class="text-center">Emtpy</h1>
+        <h1 class="text-center">Empty</h1>
     {% endif %}
     {% for file in files %}
     <li class="list-group-item text-center mb-3 border border-2 border-primary">
