--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -97,6 +97,10 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
+          <form class="d-flex" action="{% url 'search' %}" method="GET">
+            <input class="form-control me-3" type="search" name="query" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>          
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Login</a>
