--- a/cloud/templates/home.html
+++ b/cloud/templates/home.html
@@ -66,6 +66,7 @@
   .rounded-image {
     border-radius: 10%; /* 50% makes the image circular, adjust as needed */
     overflow: hidden; /* This ensures the image stays within the rounded borders */
+    max-width: 100%;
   }
   
 </style>
