added share history

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -95,6 +95,9 @@
             <a class="nav-link" href="{% url 'txt_files' %}">Text</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'my_urls' %}">Shared To Me</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           <form class="d-flex" action="{% url 'search' %}" method="GET">
