--- a/cloud/templates/upload.html
+++ b/cloud/templates/upload.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="container mt-4" style="font-size: 25px;">
     {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-danger">{{ message }}</div>
+            <div class="alert {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %}">
+                {{ message }}
+            </div>
         {% endfor %}
     {% endif %}
     <h2 class = "text-center">Upload File</h2>
