--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -77,9 +77,6 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'upload' %}">Upload</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{% url 'all_files' %}">All</a>
           </li>
           <li class="nav-item">
@@ -96,6 +93,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'my_urls' %}">Shared To Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'send_others' %}">Share To Others</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'upload' %}">Upload</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
