--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -95,7 +95,7 @@
             <a class="nav-link" href="{% url 'my_urls' %}">Shared To Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'send_others' %}">Share To Others</a>
+            <a class="nav-link" href="{% url 'share_others' %}">Share To Others</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'upload' %}">Upload</a>
