--- a/cloud/templates/share.html
+++ b/cloud/templates/share.html
@@ -10,7 +10,7 @@
         {% endfor %}
     {% endif %}
 
-    <h2 class="text-center">Send File to Others</h2>
+    <h2 class="text-center">Share File to Others</h2>
     <div class="text-center">
         <img src="{% static 'img/file-sharing.png' %}" alt="Little Cloud Logo" class="img-fluid fade-in rounded-image" style="max-width: 375px;">
     </div>
@@ -28,7 +28,7 @@
             {{ form.selected_file.errors }}
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn btn-primary">Share</button>
         </div>
     </form>
 </div>
